@@ -1,3 +1,14 @@
+2009-12-07  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        Reviewed by David Kilzer.
+
+        Bugzilla should show images in git patches
+        https://bugs.webkit.org/show_bug.cgi?id=31395
+
+        Attempt to go r51748 again using --directory option of git-apply.
+
+        * PrettyPatch/PrettyPatch.rb:
+
 2009-12-06  Shinichiro Hamaji  <hamaji@chromium.org>
 
         Unreviewed. Revert r51748.
